changes to Lab 1

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,20 +1,56 @@
-include your HTML opening tags
+<!-- include your HTML opening tags
 and your hidden "head" tag
-and your "title" tag
+and your "title" tag HELLO SOSHI YUNNIl -->
+
+<!DOCTYPE HTML>
+<html>
+  <div>
+    <h1><strong>YUVAN SUNDRANI's Labs For INST 377</strong></h1>
+    <div>
+      <h2><strong>Album Names</strong></h2>
+      <div>
+        <ol>
+          <li>American Teen - Khalid</li>
+          <li>Life's a Trip - Trippie Redd</li>
+          <li>NAV - NAV</li>
+          <li>Scary Hours 2 - Drake</li>
+          <li>Views - Drake</li>
+        </ol>
+      </div>
+      <div>
+        <h2><strong>Image Carousel</strong></h2>
+      </div>
+      <div>
+
+      </div>
+      <p>images go here</p>
+      <p>description goes here</p>
+
+    </div>
+
+  </div>
+  <footer>YUVANSUNDRANI <a href="https://github.com/yuvansundrani/INST377-Lab-Work"> yuvansundrani</a>
 
 
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
 
 
-full-width page footer containing your github account name and a link to your gitHub account
+
+</html>
+
+
+
+<!-- full-width wrapper div -->
+  <!-- header containing: YOUR NAME's Labs For INST377 -->
+  <!-- container div -->
+      <!-- left div -->
+        <!-- sub-header saying "albums" -->
+        <!-- Your top 5 albums in an ordered list -->
+      <!-- right div (main div for the site) -->
+        <!-- sub-header saying "image carousel" -->
+          <!-- div to contain four images -->
+            <!-- four images of mochi from your readings, all square (they're four different image types!) -->
+          <!-- div to contain a description or text -->
+            <!-- description of images -->
+<!--  -->
+<!--  -->
+<!-- full-width page footer containing your github account name and a link to your gitHub account -->
