adding assets and finished website

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -23,8 +23,11 @@ and your "title" tag HELLO SOSHI YUNNIl -->
       <div>
 
       </div>
-      <p>images go here</p>
-      <p>description goes here</p>
+      <img src="images/mochi.gif">
+      <img src="images/mochi.jpg">
+      <img src="images/mochi.png">
+      <img src="images/mochi.svg">
+      <p>These are images of Mochi! A dough-like, soft, powdered treat. Sometimes they have ice cream or boba in them!</p>
 
     </div>
 
