--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,10 +1,60 @@
-Replace this with your complete HTML from Lab 1
+<!-- include your HTML opening tags
+and your hidden "head" tag
+and your "title" tag HELLO SOSHI YUNNIl -->
 
-Hook it up to CSS by including style.css in the <head> tag
+<!DOCTYPE HTML>
+<html>
+  <div>
+    <h1><strong>YUVAN SUNDRANI's Labs For INST 377</strong></h1>
+	<link rel="stylesheet" href="style.css">
+    <div>
+      <h2><strong>Album Names</strong></h2>
+      <div>
+        <ol>
+          <li>American Teen - Khalid</li>
+          <li>Life's a Trip - Trippie Redd</li>
+          <li>NAV - NAV</li>
+          <li>Scary Hours 2 - Drake</li>
+          <li>Views - Drake</li>
+        </ol>
+      </div>
+      <div>
+        <h2><strong>Image Carousel</strong></h2>
+      </div>
+      <div>
 
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
+      </div>
+      <img src="images/mochi.gif">
+      <img src="images/mochi.jpg">
+      <img src="images/mochi.png">
+      <img src="images/mochi.svg">
+      <p>These are images of Mochi! A dough-like, soft, powdered treat. Sometimes they have ice cream or boba in them!</p>
 
-You should not need to edit the CSS to do this, only the HTML.
+    </div>
 
-Don't forget to add an actual set of image descriptions to your image carousel.
+  </div>
+  <footer>YUVANSUNDRANI <a href="https://github.com/yuvansundrani/INST377-Lab-Work"> yuvansundrani</a>
+
+
+
+
+
+</html>
+
+
+
+<!-- full-width wrapper div -->
+  <!-- header containing: YOUR NAME's Labs For INST377 -->
+  <!-- container div -->
+      <!-- left div -->
+        <!-- sub-header saying "albums" -->
+        <!-- Your top 5 albums in an ordered list -->
+      <!-- right div (main div for the site) -->
+        <!-- sub-header saying "image carousel" -->
+          <!-- div to contain four images -->
+            <!-- four images of mochi from your readings, all square (they're four different image types!) -->
+          <!-- div to contain a description or text -->
+            <!-- description of images -->
+<!--  -->
+<!--  -->
+<!-- full-width page footer containing your github account name and a link to your gitHub account -->
