working oin lab2

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -5,35 +5,41 @@ and your "title" tag HELLO SOSHI YUNNIl -->
 <!DOCTYPE HTML>
 <html>
   <div>
-    <h1><strong>YUVAN SUNDRANI's Labs For INST 377</strong></h1>
 	<link rel="stylesheet" href="style.css">
-    <div>
-      <h2><strong>Album Names</strong></h2>
-      <div>
-        <ol>
-          <li>American Teen - Khalid</li>
-          <li>Life's a Trip - Trippie Redd</li>
-          <li>NAV - NAV</li>
-          <li>Scary Hours 2 - Drake</li>
-          <li>Views - Drake</li>
-        </ol>
-      </div>
-      <div>
-        <h2><strong>Image Carousel</strong></h2>
-      </div>
-      <div>
-
-      </div>
-      <img src="images/mochi.gif">
-      <img src="images/mochi.jpg">
-      <img src="images/mochi.png">
-      <img src="images/mochi.svg">
-      <p>These are images of Mochi! A dough-like, soft, powdered treat. Sometimes they have ice cream or boba in them!</p>
+	<head>
+	</head>
+    <div class="wrapper">
+		<header class="header"><h1>YUVAN SUNDRANI's Labs For INST 377</h1></header>
+		<div class="container">
+		<div class="left_section box">
+			<h2>Album Names</h2>
+       		<ol>
+				<li>American Teen - Khalid</li>
+				<li>Life's a Trip - Trippie Redd</li>
+				<li>NAV - NAV</li>
+				<li>Scary Hours 2 - Drake</li>
+				<li>Views - Drake</li>
+			</ol>
+		</div>
+      <div class="right_section box">
+        <h2>Image Carousel</h2>
+		<div class="grid">
+		<img class="grid img", src="images/mochi.gif">
+      	<img class="grid img", src="images/mochi.jpg">
+     	<img class="grid img", src="images/mochi.png">
+      	<img class="grid img", src="images/mochi.svg">
+		</div>
+		<div class="box">
+     	<p>These are images of Mochi! A dough-like, soft, powdered treat. Sometimes they have ice cream or boba in them!</p>
+		</div>
+	</div>
+	</div>
+	  </div>
 
     </div>
 
   </div>
-  <footer>YUVANSUNDRANI <a href="https://github.com/yuvansundrani/INST377-Lab-Work"> yuvansundrani</a>
+  <footer class="footer">YUVANSUNDRANI <a href="https://github.com/yuvansundrani/INST377-Lab-Work"> yuvansundrani</a>
 
 
 
