--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,5 +1,67 @@
-<!--
-    Replace this with your working code from Lab 2, and include:
-    - The styles in this folder's `style.css`
-    - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
--->
+<!DOCTYPE HTML>
+<html>
+  <div>
+	<link rel="stylesheet" href="style.css">
+	<head>
+	</head>
+    <div class="wrapper">
+		<header class="header"><h1>YUVAN SUNDRANI's Labs For INST 377</h1></header>
+		<div class="container">
+		<div class="left_section box">
+			<h2>Album Names</h2>
+       		<ol>
+				<li>American Teen - Khalid</li>
+				<li>Life's a Trip - Trippie Redd</li>
+				<li>NAV - NAV</li>
+				<li>Scary Hours 2 - Drake</li>
+				<li>Views - Drake</li>
+			</ol>
+		</div>
+      <div class="right_section box">
+        <h2>Image Carousel</h2>
+
+        <div class = "carousel">
+            <div class = "prev">
+                <button id = "prev"> prev </button>
+            </div>
+            
+                <div class = "slides">
+                    <div class = "carousel_item visible">
+                        <img id = "slide_1" src="images/spiderman1.jpg" alt = "Spiderman in the 1900's"/> 
+                    </div>
+                    <div class = "carousel_item hidden">
+                        <img id = "slide_2" src="images/spiderman2.jpg" alt = "Tobey Maguire Spiderman trilogy"/>
+                    </div>
+                    <div class = "carousel_item hidden">
+                        <img id = "slide_3" src="images/spiderman3.jpg" alt = "Andrew Garfield's 2 movies"/>
+                    </div>
+                    <div class = "carousel_item hidden">
+                        <img id = "slide_4" src="images/spiderman4.jpg" alt = "Tom Holland in the MCU"/>
+                    </div>
+                </div>                                     
+
+            <div class = "next">
+                <button id = "next"> next </button>
+            </div>
+        </div>
+<div class="subtitle">
+		<div class="box">
+     	<p>These are images of the cinematic portrayal of Spider-man over the years!</p>
+		</div>
+    </div>
+
+	</div>
+	</div>
+	  </div>
+
+    </div>
+
+  </div>
+  <footer class="footer">YUVANSUNDRANI <a href="https://github.com/yuvansundrani/INST377-Lab-Work"> yuvansundrani</a>
+    </footer>
+    <div>
+        <script src= "script.js"> </script> 
+    </div>
+    </html>
+
+
