--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,10 +1,43 @@
-<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
-<!-- Try typing 'doc' at the top of this file and pressing "tab" -->
-<!-- if your development environment is set up correctly -->
-<!-- the Emmett plugin will set this file up for you -->
+<html>
+    <head>
+        <title> Lab3 - Yuvan Sundrani </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+   
+    <body>
+        <div class = "wrapper">
+            <div class = "header">
+                <div class = "h1">
+                    <header><h1> Yuvan Sundrani's Labs For INST377 </h1></header>
+                </div>
+            </div>
+            <div class = container>
+                <div class = "left_section box">
+                    <h1> Form Inputs </h1>
+                    <div class = "box">
+                        <h2> Restaurant Name </h2>
+                        <form action="/api" ID="resto">
+                            <div>
+                              <input type="text" name=""/>
+                            </div>
+                            <div class = "button">
+                              <input type="submit" value="Submit" />
+                            </div>
+                          </form>
+                    </div>
+                </div>
+                <div class = "right_section box">
+                    <h1>Local Restaurants </h1>
+                    <div class = "box">
+                        <p> A list of restaurants from an API </p>
+                    </div>
+                </div>
+            </div>
 
-<!-- Requirements -->
-<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
-<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
-
-<!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
+        </div>
+        <div class = "footer">
+                <footer> Yuvan Sundrani's Github: <a href= "https://github.com/yuvansundrani"> My Github Account </a></footer>
+        </div>
+               
+      </body>
+  </html>
