--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -3,3 +3,55 @@
 <!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
 
 <!-- Temporarily unhook your script.js file from your main index file -->
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Lab5 - Yuvan Sundrani </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    
+    <body>
+        <div class = "wrapper">
+            <div class = "header">
+                <div class = "h1">
+                    <header><h1> Yuvan Sundrani's Labs For INST377 </h1></header>
+                </div>
+            </div>
+            <div class = container>
+                <div class = "left_section box">
+                    <h1> Form Inputs </h1>
+                    <div class = "box">
+                        <div class = "left">
+                            <h2> Restaurant Name </h2>
+                        </div>
+                        <form action="/api" class = "main_form">
+                            <div>
+                                <label for="resto">Restaurant Name</label>
+                                <input type = "text" name= "resto" id = "resto"/>
+                            </div>
+                            <div class = "button">
+                              <button type ="submit">Submit</button>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+                <div class = "right_section box">
+                    <h1>Local Restaurants </h1>
+                    <div class = "box">
+                        <p> A list of restaurants from an API </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class = "footer">
+                <footer> Yuvan Sundrani's Github: <a href= "https://github.com/yuvansundrani"> My Github Account </a></footer> 
+        </div>
+            <script src="script.js"></script> 
+      </body>
+  </html>
+
